# msys2-autobuild

./: .pre-commit-config.yaml  pyproject.toml
