[tool.poetry]
name = "msys2-autobuild"
version = "0.1.0"
description = "A Python tool for automatically building MSYS2 packages in GitHub Actions"
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
attrs = ">=24.3.0"
cattrs = ">=22.2"
pygithub = ">=2.0.0"
requests-cache = ">=1.2.0"
tabulate = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
mypy = ">=1.0.0"
flake8 = ">=7.0.0"
types-requests = "*"
types-tabulate = "*"

[tool.poetry.scripts]
msys2-autobuild = "msys2_autobuild.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cspell]
version = "0.2"
words = [
    "MSYS",
    "autobuild",
    "cattrs",
    "makepkg",
    "msys",
    "msys2-autobuild",
    "mypy",
    "pacman",
    "pygithub",
    "pytest",
    "Reiter",
    "urllib",
    "urllib3"
]